syntax = "proto3";

import "google/protobuf/timestamp.proto";

package com.muhrifqii.data.protobuf;

message PendingNotification {
    string id = 1;
    string title = 2;
    string message = 3;
    string channel_id = 4;
    optional string deeplink_uri = 5;
    optional google.protobuf.Timestamp date = 6;
}

message PendingNotifications {
    repeated PendingNotification notifications = 1;
}
